--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         },
         { name: "Rear Delts", slug: "rear-delts-back", order: 4, sets: "3 × 12",
           youtube: "https://www.youtube.com/shorts/7tgx6QHB0-A",
-          machine: "Image/RearDeltsBack/machine.jpg",
+          machine: "Image/RearDeltsBack/machine.png",
           muscles: { primary: ["Rear delts"], secondary: ["Mid traps","Rhomboids"], masks: [] },
           muscleImage: "Image/RearDeltsBack/muscles.png",
           attachments: [{ name: "Rear-delt machine", photo: "Image/RearDeltsBack/handle.jpg" }],
@@ -171,7 +171,7 @@
         },
         { name: "Lateral Raise (Cable)", slug: "lat-raise-cable-back", order: 6, sets: "3 × 12",
           youtube: "https://www.youtube.com/shorts/lMJUXEvcMkQ",
-          machine: "Image/LateralRaiseCableBack/machine.jpg",
+          machine: "Image/LateralRaiseCableBack/machine.png",
           muscles: { primary: ["Medial delts"], secondary: [], masks: [] },
           muscleImage: "Image/LateralRaiseCableBack/muscles.png",
           attachments: [{ name: "Single D-handle", photo: "Image/LateralRaiseCableBack/handle.jpg" }],
