--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         },
         { name: "Chest Press (Machine)", slug: "chest-press-machine", order: 3, sets: "3 × 8",
           youtube: "https://www.youtube.com/watch?v=vnd-GBtTMLI",
-          machine: "Image/ChestPressMachine/machine.jpg",
+          machine: "Image/ChestPressMachine/machine.png",
           muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts","Triceps"], masks: [] },
           muscleImage: "Image/ChestPressMachine/muscles.png",
           attachments: [{ name: "Machine handles", photo: "Image/ChestPressMachine/handle.jpg" }],
@@ -279,7 +279,7 @@
         },
         { name: "Chest Fly", slug: "chest-fly", order: 4, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/rk8YayRoTRQ",
-          machine: "Image/ChestFly/machine.jpg",
+          machine: "Image/ChestFly/machine.png",
           muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts"], masks: [] },
           muscleImage: "Image/ChestFly/muscles.png",
           attachments: [{ name: "Pec deck or cables", photo: "Image/ChestFly/handle.jpg" }],
@@ -287,7 +287,7 @@
         },
         { name: "Chest Machine", slug: "chest-machine", order: 5, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/2awX3rTGa1k",
-          machine: "Image/ChestMachine/machine.jpg",
+          machine: "Image/ChestMachine/machine.png",
           muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts","Triceps"], masks: [] },
           muscleImage: "Image/ChestMachine/muscles.png",
           attachments: [{ name: "Machine handles", photo: "Image/ChestMachine/handle.jpg" }],
@@ -303,7 +303,7 @@
         },
         { name: "Rear Delts", slug: "rear-delts-chest", order: 7, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/Gs4e8eVMj-Q",
-          machine: "Image/RearDeltsChest/machine.jpg",
+          machine: "Image/RearDeltsChest/machine.png",
           muscles: { primary: ["Rear delts"], secondary: ["Mid traps","Rhomboids"], masks: [] },
           muscleImage: "Image/RearDeltsChest/muscles.png",
           attachments: [{ name: "Reverse pec deck or cables", photo: "Image/RearDeltsChest/handle.jpg" }],
