--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         },
         { name: "Lateral Raise (Cable)", slug: "lat-raise-cable-shoulder", order: 4, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/lMJUXEvcMkQ",
-          machine: "Image/LateralRaiseCableShoulder/machine.jpg",
+          machine: "Image/LateralRaiseCableShoulder/machine.png",
           muscles: { primary: ["Medial delts"], secondary: [], masks: [] },
           muscleImage: "Image/LateralRaiseCableShoulder/muscles.png",
           attachments: [{ name: "Single D-handle", photo: "Image/LateralRaiseCableShoulder/handle.jpg" }],
@@ -221,7 +221,7 @@
         },
         { name: "Machine Shoulder Press", slug: "machine-shoulder-press", order: 5, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/6v4nrRVySj0",
-          machine: "Image/MachineShoulderPress/machine.jpg",
+          machine: "Image/MachineShoulderPress/machine.png",
           muscles: { primary: ["Anterior delts","Medial delts"], secondary: ["Triceps"], masks: [] },
           muscleImage: "Image/MachineShoulderPress/muscles.png",
           attachments: [{ name: "Machine handles", photo: "Image/MachineShoulderPress/handle.jpg" }],
@@ -237,10 +237,10 @@
         },
         { name: "Triceps Rope", slug: "triceps-rope", order: 7, sets: "3 × 8",
           youtube: "https://www.youtube.com/watch?v=JDEDaZTEzGE",
-          machine: "Image/TricepsRope/machine.jpg",
+          machine: "Image/TricepsRope/machine.png",
           muscles: { primary: ["Triceps"], secondary: [], masks: [] },
           muscleImage: "Image/TricepsRope/muscles.png",
-          attachments: [{ name: "Rope", photo: "Image/TricepsRope/handle.jpg" }],
+          attachments: [{ name: "Rope", photo: "Image/TricepsRope/handle.jpeg" }],
           notes: "Elbows pinned, spread rope at the bottom, full lockout."
         },
         { name: "Leg Raises", slug: "leg-raises-shoulder", order: 8, sets: "3 × 15",
@@ -279,7 +279,7 @@
         },
         { name: "Chest Fly", slug: "chest-fly", order: 4, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/rk8YayRoTRQ",
-          machine: "Image/ChestFly/machine.png",
+          machine: "Image/ChestFly/machine.jpeg",
           muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts"], masks: [] },
           muscleImage: "Image/ChestFly/muscles.png",
           attachments: [{ name: "Pec deck or cables", photo: "Image/ChestFly/handle.jpg" }],
