--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         },
         { name: "Chest Fly", slug: "chest-fly", order: 4, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/rk8YayRoTRQ",
-          machine: "Image/ChestFly/machine.jpeg",
+          machine: "Image/ChestFly/machine.jpg",
           muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts"], masks: [] },
           muscleImage: "Image/ChestFly/muscles.png",
           attachments: [{ name: "Pec deck or cables", photo: "Image/ChestFly/handle.jpg" }],
