--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
     label: "Grouped by Muscle",
     groups: {
       Back: [
-        { name: "Warm-up", slug: "back-warmup", order: 1, sets: "10 min",
-          youtube: "",
-          machine: "Image/BackWarmup/machine.jpg",
+        { name: "Warm-up", slug: "warmup", order: 1, sets: "10 min",
+          youtube: "https://www.youtube.com/shorts/5BczW2uJCGc",
+          machine: "Image/Warmup/machine.png",
           muscles: { primary: [], secondary: [], masks: [] },
-          muscleImage: "Image/BackWarmup/muscles.png",
+          muscleImage: "Image/Warmup/muscles.png",
           attachments: [],
-          notes: "Light pulldowns/rows, scap pull-ups, band work. Keep it easy."
+          notes:"",
         },
         { name: "Lat Pulldown (MAG Grip)", slug: "lat-mag", order: 2, sets: "6 × 8",
           youtube: "https://www.youtube.com/shorts/suWROTA8PVY",
@@ -187,13 +187,13 @@
         }
       ],
       Shoulders: [
-        { name: "Warm-up", slug: "shoulder-warmup", order: 1, sets: "10 min",
-          youtube: "",
-          machine: "Image/ShoulderWarmup/machine.jpg",
+        { name: "Warm-up", slug: "warmup", order: 1, sets: "10 min",
+          youtube: "https://www.youtube.com/shorts/5BczW2uJCGc",
+          machine: "Image/Warmup/machine.png",
           muscles: { primary: [], secondary: [], masks: [] },
-          muscleImage: "Image/ShoulderWarmup/muscles.png",
+          muscleImage: "Image/Warmup/muscles.png",
           attachments: [],
-          notes: "Bands, scapular CARs, light raises. Keep it easy."
+          notes:"",
         },
         { name: "Shoulder Press", slug: "shoulder-press", order: 2, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/k6tzKisR3NY",
@@ -253,13 +253,13 @@
         }
       ],
       Chest: [
-        { name: "Warm-up", slug: "chest-warmup", order: 1, sets: "10 min",
-          youtube: "",
-          machine: "Image/ChestWarmup/machine.jpg",
+        { name: "Warm-up", slug: "warmup", order: 1, sets: "10 min",
+          youtube: "https://www.youtube.com/shorts/5BczW2uJCGc",
+          machine: "Image/Warmup/machine.png",
           muscles: { primary: [], secondary: [], masks: [] },
-          muscleImage: "Image/ChestWarmup/muscles.png",
+          muscleImage: "Image/Warmup/muscles.png",
           attachments: [],
-          notes: "Scap push-ups, band pull-aparts, light presses."
+          notes:"",
         },
         { name: "Chest Press (Dumbbell)", slug: "chest-press-dumbbell", order: 2, sets: "3 × 8",
           youtube: "https://www.youtube.com/shorts/8fXfwG4ftaQ",
@@ -318,7 +318,16 @@
           notes: "Posterior tilt, heels together, slow lower."
         }
       ],
-      Legs: []
+      Legs: [
+        { name: "Warm-up", slug: "warmup", order: 1, sets: "10 min",
+          youtube: "https://www.youtube.com/shorts/5BczW2uJCGc",
+          machine: "Image/Warmup/machine.png",
+          muscles: { primary: [], secondary: [], masks: [] },
+          muscleImage: "Image/Warmup/muscles.png",
+          attachments: [],
+          notes:"",
+        },
+      ]
     }
   };
   // ---------- STOP EDITING HERE ----------
