--- a/index.html
+++ b/index.html
@@ -327,6 +327,38 @@
           attachments: [],
           notes:"",
         },
+        { name: "Pendulum Squat", slug: "Pendulum", order: 2, sets: "4 x 8",
+          youtube: "https://www.youtube.com/watch?v=QCLWnLNM35U",
+          machine: "Image/Pendulum/machine.png",
+          muscles: { primary: [], secondary: [], masks: [] },
+          muscleImage: "Image/Pendulum/muscles.png",
+          attachments: [],
+          notes:"",
+        },
+        { name: "Leg Curl", slug: "LegCurlo", order: 3, sets: "4 x 8",
+          youtube: "https://www.youtube.com/shorts/_lgE0gPvbik",
+          machine: "Image/LegCurl/machine.png",
+          muscles: { primary: [], secondary: [], masks: [] },
+          muscleImage: "Image/LegCurl/muscles.png",
+          attachments: [],
+          notes:"",
+        },
+        { name: "Leg Press", slug: "LegPress", order: 4, sets: "4 x 8",
+          youtube: "https://www.youtube.com/shorts/EotSw18oR9w",
+          machine: "Image/LegPress/machine.png",
+          muscles: { primary: [], secondary: [], masks: [] },
+          muscleImage: "Image/LegPress/muscles.png",
+          attachments: [],
+          notes:"",
+        },
+        { name: "Bulgarian Squat", slug: "warmup", order: 5, sets: "4 x 8",
+          youtube: "https://www.youtube.com/shorts/or1frhkjBDc",
+          machine: "Image/BulgarianSquat/machine.png",
+          muscles: { primary: [], secondary: [], masks: [] },
+          muscleImage: "Image/BulgarianSquat/muscles.png",
+          attachments: [],
+          notes:"",
+        },
       ]
     }
   };
