--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           attachments: [],
           notes:"",
         },
-        { name: "Leg Curl", slug: "LegCurlo", order: 3, sets: "4 x 8",
+        { name: "Leg Curl", slug: "LegCurl", order: 3, sets: "4 x 8",
           youtube: "https://www.youtube.com/shorts/_lgE0gPvbik",
           machine: "Image/LegCurl/machine.png",
           muscles: { primary: [], secondary: [], masks: [] },
@@ -344,16 +344,16 @@
           notes:"",
         },
         { name: "Leg Press", slug: "LegPress", order: 4, sets: "4 x 8",
-          youtube: "https://www.youtube.com/shorts/EotSw18oR9w",
-          machine: "Image/LegPress/machine.png",
+          youtube: "https://www.youtube.com/watch?v=uEsZWWiYNAQ",
+          machine: "Image/LegPress/machine.jpg",
           muscles: { primary: [], secondary: [], masks: [] },
           muscleImage: "Image/LegPress/muscles.png",
           attachments: [],
           notes:"",
         },
-        { name: "Bulgarian Squat", slug: "warmup", order: 5, sets: "4 x 8",
-          youtube: "https://www.youtube.com/shorts/or1frhkjBDc",
-          machine: "Image/BulgarianSquat/machine.png",
+        { name: "Bulgarian Squat", slug: "BulgarianSquat", order: 5, sets: "4 x 8",
+          youtube: "https://www.youtube.com/watch?v=SkNsa3eBwLA",
+          machine: "Image/BulgarianSquat/machine.jpg",
           muscles: { primary: [], secondary: [], masks: [] },
           muscleImage: "Image/BulgarianSquat/muscles.png",
           attachments: [],
