--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         { name: "Chest Press (Machine)", slug: "chest-press-machine", order: 3, sets: "3 × 8",
           youtube: "https://www.youtube.com/watch?v=vnd-GBtTMLI",
           machine: "Image/ChestPressMachine/machine.png",
-          muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts","Triceps"], masks: [] },
+          muscles: { primary: ["Pectoralis majors"], secondary: ["Anterior delts","Triceps"], masks: [] },
           muscleImage: "Image/ChestPressMachine/muscles.png",
           attachments: [{ name: "Machine handles", photo: "Image/ChestPressMachine/handle.jpg" }],
           notes: "Seat so handles align mid-chest; steady tempo."
